--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.js --inspect server.js",
-    "dev": "nodemon ./src/index.js",
+    "start": "node ./index.js --inspect server.js",
+    "dev": "nodemon ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "engines" : { 
-    "node" : ">=14.0.0 <17.0.0"
+  "engines": {
+    "node": ">=14.0.0 <17.0.0"
   },
   "author": "",
   "license": "ISC",
