--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ MONGO_DB=library
 
 JWT_SECRET=test
 
-MONGO_URL=mongodb+srv://sebastiaanmaes:Fub8JJ3yeDwTOyFw@cluster0.hjjrlnz.mongodb.net/
+MONGO_URL=mongodb://uwcrfhwbqrijafxiwrmo:TbjHvbmoFB9KiMH43I2R@n1-c2-mongodb-clevercloud-customers.services.clever-cloud.com:27017,n2-c2-mongodb-clevercloud-customers.services.clever-cloud.com:27017/b8indyzxgb9mopk?replicaSet=rs0
